--- a/app.scss
+++ b/app.scss
@@ -85,3 +85,20 @@ html, body {
     width: 84%;
   }
 }
+
+@media screen and (max-width: 37.5em) {
+  .title {
+    font-size: 2.4em;
+  }
+  .header {
+    $csize: 20em;
+    height: $csize/2;
+    .circle {
+      width: $csize;
+      height: $csize;
+    }
+    .bar {
+      height: $csize/10;
+    }
+  }
+}
