--- a/app.scss
+++ b/app.scss
@@ -9,7 +9,7 @@ html, body {
 }
 
 .circle {
-  border-radius: 100%;
+  border-radius: 50%;
 }
 
 .title {
@@ -78,6 +78,64 @@ html, body {
   box-shadow: inset 0 1px 3px #ddd;
 
   span { font-weight: bold; margin-left: 0.5em; }
+}
+
+.footer {
+  transition: all 1s;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+  display: block;
+  height: 100%;
+  width: 100%;
+  //opacity: 0;
+  background: #dadada;
+
+  &.active {
+    transform: none;
+    //opacity: 1;
+  }
+}
+
+.footer-hint-wrapper {
+  z-index: 11;
+  display: block;
+  width: 3em;
+  height: 1.5em;
+  overflow: hidden;
+  transition: all 1s;
+  position: absolute;
+  top: 100%;;
+  left: 50%;
+  transform: translate(-50%, -100%);
+
+  &.active {
+    top: 0;
+    transform: translate(-50%, 0) rotate(180deg);
+  }
+}
+
+.footer-hint {
+  display: block;
+  width: 3em;
+  height: 3em;
+  background: #949494;
+  border-radius: 50%;
+  cursor: pointer;
+
+  &:after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -25%) rotate(-45deg);
+    display: block;
+    content: " ";
+    width: 0.6em;
+    height: 0.6em;
+    border-right: 4px solid white;
+    border-top: 4px solid white;
+  }
 }
 
 @media screen and (max-width: 48em) {
